# 338.ai

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
src/: main.py
src/bot338/: utils.py
src/bot338/api/: app.py  client.py
src/bot338/api/routers/: chat.py  database.py  retrieve.py
src/bot338/chat/: chat.py  config.py  rag.py  schemas.py
src/bot338/database/: client.py  config.py  database.py  models.py  schemas.py
src/bot338/ingestion/: __main__.py  config.py  prepare_data.py  preprocess.ipynb  preprocess_data.py  report.py  utils.py  vectorstores.py
src/bot338/ingestion/preprocessors/: bills.py
src/bot338/rag/: query_handler.py  response_synthesis.py  retrieval.py  utils.py
src/bot338/retriever/: __init__.py  base.py  reranking.py  utils.py
