[tool.poetry]
name = "bot338"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["src/**/*"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
weave = "^0.51.12"
openai = "^1.51.0"
langchain = "^0.3.2"
langchain-openai = "^0.2.2"
langchain-chroma = "^0.1.4"
wandb = {extras = ["workspaces"], version = "^0.18.3"}
pydantic-settings = "^2.5.2"
langchain-text-splitters = "^0.3.0"
tiktoken = "^0.8.0"
giturlparse = "^0.12.0"
bs4 = "^0.0.2"
langchain-community = "^0.3.1"
lancedb = "^0.13.0"
langchain-cohere = "^0.3.0"
sqlalchemy = "^2.0.35"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
